2019-01-02  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/88130
	* g++.dg/torture/pr88130.C: New testcase.

2019-01-02  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/88650
	* gfortran.dg/predict-3.f90: New test.

2019-01-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/gcov/pr88263.C: Rename namespace log to logging.

2019-01-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/88621
	* gcc.dg/torture/pr88621.c: New testcase.

2019-01-02  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/88561
	* g++.dg/tree-prof/devirt.C: Expect _ZThn16 only for lp64 and llp64
	targets and expect _ZThn8 for ilp32 targets.

2019-01-01  Martin Sebor  <msebor@redhat.com>
            Jeff Law  <law@redhat.com>

	* gcc.dg/strlenopt-40.c: Update.
	* gcc.dg/strlenopt-51.c: Likewise.
	* gcc.dg/tree-ssa/pr79376.c: Likewise.

	* gcc.dg/strlenopt-40.c: Disable a couple tests.
	* gcc.dg/strlenopt-48.c: Twiddle test slightly.
	* gcc.dg/strlenopt-59.c: New test.
	* gcc.dg/tree-ssa/builtin-snprintf-5.c: New test.
	* g++.dg/init/strlen.C: New test.

2019-01-01  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/82743
	* gfortran.dg/structure_constructor_16.f90: New test.

2019-01-01  Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/ipa/devirt-36.C: Add dg-do-compile.
	* g++.dg/ipa/devirt-53.C: Fix scan template.

2019-01-01  Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/lto/devirt-13_0.C: Drop broken scan of ssa dump.
	* g++.dg/lto/devirt-14_0.C: Drop broken scan of ssa dump.
	* g++.dg/lto/devirt-23_0.C: Add -fdump-ipa-cp.

2019-01-01  Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/tree-prof/devirt.C: Update testcase.

2019-01-01  Jakub Jelinek  <jakub@redhat.com>

	Update copyright years.

Copyright (C) 2019 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.